--- a/aws-cognito/package.json
+++ b/aws-cognito/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexal-serverless-starter",
+  "name": "usermanagement-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
